Fixed padding issue on mobile view for tabs.less

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -279,6 +279,11 @@ nav button {
 .tab-navigator {
   padding: 20px;
 }
+@media (max-width: 500px) {
+  .tab-navigator {
+    padding: 0;
+  }
+}
 .tab-navigator .tabs {
   display: flex;
   justify-content: center;
