--- a/Tabs/Tabs.less
+++ b/Tabs/Tabs.less
@@ -1,5 +1,9 @@
 .tab-navigator {
     padding: 20px;
+
+    @media @mobile {
+        padding: 0;
+    }
     
     .tabs {
         .displayFlex(center);
